make captcha string is case insensitive

--- a/html/retry_captcha.html
+++ b/html/retry_captcha.html
@@ -7,7 +7,9 @@
     </style>
     <body>
         <div align="center">
-            <p> Your last input CAPTHCA is incorrect. please try again.</p>
+            <p> Your last input CAPTHCA is incorrect. please try again.<br />
+            Upper case and lower case letter are treated to be the same letter.</p>
+            <p>服务器负载过高，请输入验证码，验证码不区分大小写</p>
             <img src="captcha.jpg" alt="Captcha image">
             <form action="/verify" method="POST">
                 CATPCHA: 
