--- a/html/captcha.html
+++ b/html/captcha.html
@@ -1,10 +1,9 @@
 <html>
-    <title>
-        The CAPTCHA page
-    </title>
-    <style>
-        body { font-family: Tahoma, Verdana, Arial, sans-serif; }
-    </style>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <title> The CAPTCHA page </title>
+        <style> body { font-family: Tahoma, Verdana, Arial, sans-serif; } </style>
+    </head>
     <body>
         <div align="center">
             <p> The server is in high load. Please input the CATPCHA. <br />
